[bdist_wheel]
universal = 1

[metadata]
license-file = LICENSE

[aliases]
test = pytest
release = dists upload
dists = clean --all sdist bdist_wheel

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = boot
multi_line_output = 5
not_skip = __init__.py

[tool:pytest]
norecursedirs = dist build
python_files = tests/*.py

[coverage:run]
branch = True
include =
    src/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
